--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.2.3",
+    "grommet": "^2.17.3",
+    "grommet-icons": "^4.6.0",
+    "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.8",
-    "typescript": "4.3.2"
+    "@types/react": "17.0.14",
+    "typescript": "4.3.5"
   },
   "volta": {
     "node": "14.17.0",
