--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start"
+    "local": "netlify dev",
+    "build": "next build && next export"
   },
   "dependencies": {
     "grommet": "^2.17.3",
