--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,7 @@
+[build.environment]
+  NODE_VERSION = "16.8.0"
+  NPM_VERSION = "7.22.0"
+
 [[redirects]]
   from = "/place"
   to = "https://place-asny23hub.vercel.app/place"
