--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "setup": "npm i -g netlify-cli",
     "dev": "next dev",
     "local": "netlify dev",
     "build": "next build && next export"
   },
   "dependencies": {
-    "grommet": "^2.17.3",
-    "grommet-icons": "^4.6.0",
-    "next": "11.0.1",
+    "grommet": "^2.17.5",
+    "grommet-icons": "^4.6.2",
+    "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
-    "@types/react": "17.0.14",
-    "typescript": "4.3.5"
+    "@types/react": "17.0.20",
+    "typescript": "4.4.2"
   },
   "volta": {
     "node": "16.8.0",
