--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asny23/homepage",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "setup": "npm i -g netlify-cli",
@@ -9,19 +9,20 @@
     "build": "next build && next export"
   },
   "dependencies": {
-    "grommet": "^2.17.5",
-    "grommet-icons": "^4.6.2",
-    "next": "11.1.2",
+    "grommet": "^2.20.1",
+    "grommet-icons": "^4.7.0",
+    "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/react": "17.0.20",
-    "typescript": "4.4.2"
+    "@types/node": "^17.0.15",
+    "@types/react": "17.0.39",
+    "typescript": "4.5.5"
   },
   "volta": {
-    "node": "16.8.0",
-    "npm": "7.22.0"
+    "node": "16.13.2",
+    "npm": "8.4.1"
   }
 }
