--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asny23/homepage",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "setup": "npm i -g netlify-cli",
@@ -9,17 +9,17 @@
     "build": "next build && next export"
   },
   "dependencies": {
-    "grommet": "^2.23.0",
-    "grommet-icons": "^4.7.0",
-    "next": "12.1.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "^5.3.5"
+    "grommet": "^2.28.0",
+    "grommet-icons": "^4.8.0",
+    "next": "13.0.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@types/node": "^17.0.34",
-    "@types/react": "17.0.45",
-    "typescript": "4.6.4"
+    "@types/node": "^18.11.12",
+    "@types/react": "^18.0.26",
+    "typescript": "^4.9.4"
   },
   "volta": {
     "node": "18.12.1",
