--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@checkly/cli": "^0.4.7",
     "@types/node": "^18.11.12",
     "@types/react": "^18.0.26",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "volta": {
