--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
-    "@checkly/cli": "^0.4.12",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.37",
+    "checkly": "^4.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
