--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
-[build.environment]
-  NODE_VERSION = "18.16.0"
-  NPM_VERSION = "9.6.5"
+[build]
+  command = "bun run build"
+  publish = "out"
 
 [[redirects]]
   from = "/place"
