--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.0",
   "private": true,
   "scripts": {
-    "setup": "npm i -g netlify-cli",
+    "setup": "bun add -g netlify-cli",
     "dev": "next dev",
     "local": "netlify dev",
     "build": "next build"
@@ -22,9 +22,5 @@
     "checkly": "^4.6.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
-  },
-  "volta": {
-    "node": "18.17.1",
-    "npm": "9.8.1"
   }
 }
